# Advent-of-Code

./: .gitignore  README.md
2018/src/: Heap.java  day1.java  day10.java  day11.java  day12.java  day14.java  day2.java  day3.java  day4.java  day5.java  day6.java  day7.java  day8.java  day9.java
2019/day1/: day1  day1.c  day1.py
2019/day10/: day10.py
2019/day12/: day12.py
2019/day14/: day14.py
2019/day16/: day16.py
2019/day2/: day2.py
2019/day3/: day3.py
2019/day4/: day4.py
2019/day5/: day5.py
2019/day6/: day6.py
2019/day7/: day7.py
2019/day8/: day8.py
2020/day1/: a.py
2020/day12/: a.py
2020/day13/: a.py
2020/day16/: a.py
2020/day17/: a.py
2020/day18/: a.py
2020/day19/: a.py
2020/day20/: a.py
2020/day4/: a.py
2020/day5/: a.py
2020/day7/: a.py
2022/: CMakeLists.txt
2022/src/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2022/utils/: algo.hpp  input.hpp  tree.hpp
day10/: a.py
day11/: a.py
day14/: a.py
day15/: a.py
day2/: a.py
day3/: a.py
day5/: a.py
day6/: a.py
day7/: a.py  note.txt
day8/: a.py
day9/: a.py
